// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartTeaser component should render the CartTeaser component with count and amount 1`] = `
<div
  className="cart-teaser"
>
  <div>
    <span
      className="count"
    >
      Items: 
      5
    </span>
    <span
      className="total"
    >
      Total: 
      <span
        className="total__amount"
      >
        60
      </span>
       
      <span
        className="total__currency"
      >
        EUR
      </span>
    </span>
    <br />
    <a
      className="checkout"
      href="/cart"
      onClick={[Function]}
    >
      <button
        className="button button--checkout"
      >
        Checkout
      </button>
    </a>
  </div>
</div>
`;

exports[`CartTeaser component should render the CartTeaser component with error text 1`] = `
<div
  className="cart-teaser"
>
  <span>
    Error loading cart
  </span>
</div>
`;

exports[`CartTeaser component should render the CartTeaser component with loading text 1`] = `
<div
  className="cart-teaser"
>
  <span>
    Loading
  </span>
</div>
`;
